--- a/bem.html
+++ b/bem.html
@@ -91,7 +91,7 @@
     </div>
 </div>
 <footer class="bem_main-footer">
-    <p class="bem_main-footer__p-footer">&copy2017 Copyright&copy, &nbsp<a class="bem_main-footer__a-footer" href="#" title="thao.pham">thao.pham</a></p>
+    <p class="bem_main-footer__info">&copy2017 Copyright&copy, &nbsp<a class="bem_main-footer__link" href="#" title="thao.pham">thao.pham</a></p>
 </footer>
 </body>
 </html>
